Fix scrollbar on what's new dialog so that it appears and allows users to click past.

--- a/css/80_app_fb.css
+++ b/css/80_app_fb.css
@@ -435,10 +435,15 @@ button.rapid-features.layer-off use {
     background: #ccc;
 }
 
+.modal.rapid-modal.modal-whatsnew div.content {
+    overflow-y: auto;
+}
+
 .modal.rapid-modal.modal-whatsnew img.whatsnew-image {
-    width: 100%;
+    max-width: 75%;
     margin-top: 20px;
 }
+
 .modal.rapid-modal.modal-whatsnew .modal-section.dontshow {
     font-size: 16px;
     padding: 0 30px;
